Fixing misalignment

--- a/orcid-web/src/main/webapp/static/css/orcid.new.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.new.css
@@ -6269,7 +6269,7 @@ a:hover .mozilla-badge{
 
 .fixed-area{ /* Global class for edit profile */
 	width: 100%;
-	height: 250px;
+	height: 300px;
 	overflow-y: scroll;	
 	overflow-x: hidden;
 	margin-top: 30px; 	
@@ -6297,6 +6297,18 @@ a:hover .mozilla-badge{
 	min-height: 678px; 
 }
 
+.scroll-area-padding{
+	padding-top: 66px;
+}
+
+.fixed-area .fixed-bar{
+	position: absolute;
+	z-index: 500;
+	background: white;
+	width: 568px;
+	height: 65px;
+}
+
 .fixed-area .scroll-area input[type="textbox"],
 .fixed-area .scroll-area input[type="text"],
 .fixed-area .scroll-area select{
@@ -6306,6 +6318,11 @@ a:hover .mozilla-badge{
 
 .fixed-area .col-md-12{
 	padding-right: 0;
+}
+
+.fixed-bar .popover-help-container{
+	top: -195 !important;
+    left: -4 !important;
 }
 
 .aka-row{
@@ -6631,7 +6648,7 @@ a:hover .mozilla-badge{
 /* Bulk edit bio*/
 
 .bio-edit-modal{
-	margin-right: 47px;
+	margin-right: 30px;
 }
 
 .bulk-edit-modal .custom-control-title{
